Reboot using sui

--- a/build.gradle
+++ b/build.gradle
@@ -45,6 +45,7 @@ allprojects {
         google()
         jcenter()
         maven { url 'https://jitpack.io' }
+        maven { url 'https://dl.bintray.com/rikkaw/Libraries' }
     }
 }
 
