--- a/app/build.gradle
+++ b/app/build.gradle
@@ -69,7 +69,9 @@ dependencies {
     implementation 'com.google.android.material:material:1.2.1'
     implementation 'com.takisoft.preferencex:preferencex:1.1.0'
     implementation 'com.takisoft.preferencex:preferencex-colorpicker:1.1.0'
+    implementation "rikka.shizuku:api:11.0.1"
     implementation 'tech.rectifier.preferencex-android:preferencex-simplemenu:88f93154b2'
     implementation 'me.zhanghai.android.appiconloader:appiconloader-glide:1.2.0'
     implementation 'me.zhanghai.android.fastscroll:library:1.1.5'
+    compileOnly project(":hiddenapi-stubs")
 }
