Post builds to channel

--- a/.github/workflows/core.yml
+++ b/.github/workflows/core.yml
@@ -44,3 +44,12 @@ jobs:
       with:
         name: LSPosed-debug
         path: './LSPosed-debug/*'
+    - name: Post to channel
+      env:
+        CHANNEL_ID: ${{ secrets.CHANNEL_ID }}
+        BOT_TOKEN: ${{ secrets.BOT_TOKEN }}
+      run: |
+        OUTPUT="edxp-core/release/"
+        export release=$(find $OUTPUT -name "LSPosed-v*-release.zip")
+        export debug=$(find $OUTPUT -name "LSPosed-v*-debug.zip")
+        curl -v "https://api.telegram.org/bot${BOT_TOKEN}/sendMediaGroup?chat_id=${CHANNEL_ID}&media=%5B%7B%22type%22:%22document%22,%20%22media%22:%22attach://release%22%7D,%7B%22type%22:%22document%22,%20%22media%22:%22attach://debug%22%7D%5D"  -F release="@$release" -F debug="@$debug"
