--- a/.github/workflows/core.yml
+++ b/.github/workflows/core.yml
@@ -33,8 +33,8 @@ jobs:
       run:  bash ./gradlew zipRelease zipDebug :app:assembleRelease
     - name: Prepare artifact
       if: success()
-      run: unzip lspd-core/release/LSPosed-v*-release.zip -d LSPosed-release;
-           unzip lspd-core/release/LSPosed-v*-debug.zip -d LSPosed-debug;
+      run: unzip core/release/LSPosed-v*-release.zip -d LSPosed-release;
+           unzip core/release/LSPosed-v*-debug.zip -d LSPosed-debug;
     - name: Upload release
       uses: actions/upload-artifact@v2
       with:
@@ -51,7 +51,7 @@ jobs:
         CHANNEL_ID: ${{ secrets.CHANNEL_ID }}
         BOT_TOKEN: ${{ secrets.BOT_TOKEN }}
       run: |
-        OUTPUT="lspd-core/release/"
+        OUTPUT="core/release/"
         export release=$(find $OUTPUT -name "LSPosed-v*-release.zip")
         export debug=$(find $OUTPUT -name "LSPosed-v*-debug.zip")
         curl -v "https://api.telegram.org/bot${BOT_TOKEN}/sendMediaGroup?chat_id=${CHANNEL_ID}&media=%5B%7B%22type%22:%22document%22,%20%22media%22:%22attach://release%22%7D,%7B%22type%22:%22document%22,%20%22media%22:%22attach://debug%22%7D%5D"  -F release="@$release" -F debug="@$debug"
