--- a/gradle.properties
+++ b/gradle.properties
@@ -1,8 +1,22 @@
-androidCompileSdkVersion=30
-androidMinSdkVersion=26
+## For more details on how to configure your build environment visit
+# http://www.gradle.org/docs/current/userguide/build_environment.html
+#
+# Specifies the JVM arguments used for the daemon process.
+# The setting is particularly useful for tweaking memory settings.
+# Default value: -Xmx1024m -XX:MaxPermSize=256m
+# org.gradle.jvmargs=-Xmx2048m -XX:MaxPermSize=512m -XX:+HeapDumpOnOutOfMemoryError -Dfile.encoding=UTF-8
+#
+# When configured, Gradle will run in incubating parallel mode.
+# This option should only be used with decoupled projects. More details, visit
+# http://www.gradle.org/docs/current/userguide/multi_project_builds.html#sec:decoupled_projects
+# org.gradle.parallel=true
+#Sat Jan 30 19:20:27 CST 2021
 androidTargetSdkVersion=30
 androidCompileNdkVersion=22.0.7026061
-android.prefabVersion=1.1.2
 apiCode=93
+androidCompileSdkVersion=30
+androidMinSdkVersion=26
+org.gradle.jvmargs=-Xmx2048M
 android.useAndroidX=true
 android.enableJetifier=true
+android.prefabVersion=1.1.2
