--- a/core/build.gradle
+++ b/core/build.gradle
@@ -102,6 +102,7 @@ android {
         }
     }
     ndkVersion androidCompileNdkVersion
+    buildToolsVersion androidBuildToolsVersion
     compileOptions {
         targetCompatibility JavaVersion.VERSION_1_7
         sourceCompatibility JavaVersion.VERSION_1_7
