--- a/gradle.properties
+++ b/gradle.properties
@@ -13,6 +13,7 @@
 #Sat Jan 30 19:20:27 CST 2021
 androidTargetSdkVersion=30
 androidCompileNdkVersion=22.0.7026061
+androidBuildToolsVersion=30.0.3
 apiCode=93
 androidCompileSdkVersion=30
 androidMinSdkVersion=26
