--- a/build.gradle
+++ b/build.gradle
@@ -15,8 +15,8 @@ buildscript {
 }
 
 allprojects {
+    def buildVersionName = versionName
     // Values set here will be overriden by AppVeyor, feel free to modify during development.
-    def buildVersionName = 'v0.5.3.0'
     def buildVersionCode = 233
 
     if (System.env.APPVEYOR_BUILD_VERSION != null) {
