--- a/gradle.properties
+++ b/gradle.properties
@@ -21,3 +21,4 @@ org.gradle.jvmargs=-Xmx2048M
 android.useAndroidX=true
 android.enableJetifier=true
 android.prefabVersion=1.1.2
+versionName=v0.5.4.0
