--- a/app/build.gradle
+++ b/app/build.gradle
@@ -67,9 +67,16 @@ dependencies {
     implementation "androidx.recyclerview:recyclerview:1.1.0"
     implementation 'androidx.swiperefreshlayout:swiperefreshlayout:1.1.0'
     implementation 'com.github.bumptech.glide:glide:4.11.0'
-    implementation 'com.google.android.material:material:1.2.1'
+    implementation 'com.github.bumptech.glide:okhttp3-integration:4.11.0'
+    implementation 'com.google.android.material:material:1.3.0'
+    implementation 'com.google.code.gson:gson:2.8.6'
     implementation 'com.takisoft.preferencex:preferencex:1.1.0'
     implementation 'com.takisoft.preferencex:preferencex-colorpicker:1.1.0'
+    implementation 'com.squareup.okhttp3:okhttp:4.9.0'
+    final def markwon_version = '4.6.2'
+    implementation "io.noties.markwon:core:$markwon_version"
+    implementation "io.noties.markwon:image:$markwon_version"
+    implementation "io.noties.markwon:html:$markwon_version"
     implementation 'rikka.insets:insets:1.0.1'
     implementation 'rikka.recyclerview:recyclerview-utils:1.2.0'
     implementation "rikka.widget:switchbar:1.0.2"
