--- a/app/build.gradle
+++ b/app/build.gradle
@@ -69,6 +69,7 @@ dependencies {
     implementation 'com.caverock:androidsvg-aar:1.4'
     implementation 'com.github.bumptech.glide:glide:4.11.0'
     implementation 'com.github.bumptech.glide:okhttp3-integration:4.11.0'
+    implementation 'com.github.jinatonic.confetti:confetti:1.1.2'
     implementation 'com.google.android.material:material:1.3.0'
     implementation 'com.google.code.gson:gson:2.8.6'
     implementation 'com.takisoft.preferencex:preferencex:1.1.0'
@@ -76,9 +77,11 @@ dependencies {
     implementation 'com.squareup.okhttp3:okhttp:4.9.0'
     final def markwon_version = '4.6.2'
     implementation "io.noties.markwon:core:$markwon_version"
-    implementation "io.noties.markwon:image:$markwon_version"
-    implementation "io.noties.markwon:image-glide:$markwon_version"
+    implementation "io.noties.markwon:ext-strikethrough:$markwon_version"
+    implementation "io.noties.markwon:ext-tables:$markwon_version"
+    implementation "io.noties.markwon:ext-tasklist:$markwon_version"
     implementation "io.noties.markwon:html:$markwon_version"
+    implementation "io.noties.markwon:image-glide:$markwon_version"
     implementation "io.noties.markwon:linkify:$markwon_version"
     implementation 'rikka.insets:insets:1.0.1'
     implementation 'rikka.recyclerview:recyclerview-utils:1.2.0'
@@ -87,9 +90,11 @@ dependencies {
     implementation 'tech.rectifier.preferencex-android:preferencex-simplemenu:88f93154b2'
     implementation 'me.zhanghai.android.appiconloader:appiconloader-glide:1.2.0'
     implementation 'me.zhanghai.android.fastscroll:library:1.1.5'
-    //noinspection DifferentStdlibGradleVersion
-    implementation 'org.jetbrains.kotlin:kotlin-stdlib-jdk8:1.4.21'
-    implementation 'com.github.jinatonic.confetti:confetti:1.1.2'
     implementation files('libs/WeatherView-2.0.3.aar')
     compileOnly project(":hiddenapi-stubs")
+}
+
+configurations {
+    cleanedAnnotations
+    compile.exclude group: 'org.jetbrains' , module:'annotations'
 }
