--- a/app/build.gradle
+++ b/app/build.gradle
@@ -17,6 +17,7 @@
  * Copyright (C) 2020 EdXposed Contributors
  * Copyright (C) 2021 LSPosed Contributors
  */
+import java.nio.file.Paths
 
 apply plugin: 'com.android.application'
 
@@ -77,6 +78,29 @@ android {
         variant.outputs.all { output ->
             outputFileName = "LSPosedManager-${defaultConfig.versionName}-${defaultConfig.versionCode}-${buildType.name}.apk"
         }
+    }
+}
+
+def optimizeReleaseResources = task('optimizeReleaseResources').doLast {
+    def aapt2 = Paths.get(project.android.sdkDirectory.path, 'build-tools', project.android.buildToolsVersion, 'aapt2')
+    def zip = Paths.get(project.buildDir.path, 'intermediates',
+            'processed_res', 'release', 'out', "resources-release.ap_")
+    def optimized = new File("${zip}.opt")
+    def cmd = exec {
+        commandLine aapt2, 'optimize', '--collapse-resource-names',
+                '--shorten-resource-paths',
+                '-o', optimized, zip
+        ignoreExitValue false
+    }
+    if (cmd.exitValue == 0) {
+        delete(zip)
+        optimized.renameTo("$zip")
+    }
+}
+
+tasks.whenTaskAdded { task ->
+    if (task.name == 'processReleaseResources') {
+        task.finalizedBy optimizeReleaseResources
     }
 }
 
