--- a/app/build.gradle
+++ b/app/build.gradle
@@ -105,25 +105,25 @@ tasks.whenTaskAdded { task ->
 }
 
 dependencies {
-    annotationProcessor 'com.github.bumptech.glide:compiler:4.11.0'
-    implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation "androidx.activity:activity:1.3.0-alpha02"
+    final def glide_version = '4.12.0'
+    final def markwon_version = '4.6.2'
+    final def okhttp_version = '4.9.1'
+    annotationProcessor "com.github.bumptech.glide:compiler:$glide_version"
+    implementation 'androidx.activity:activity:1.2.0'
     implementation 'androidx.browser:browser:1.3.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
-    implementation "androidx.fragment:fragment:1.3.0"
-    implementation "androidx.recyclerview:recyclerview:1.1.0"
-    implementation 'androidx.swiperefreshlayout:swiperefreshlayout:1.1.0'
+    implementation 'androidx.fragment:fragment:1.3.0'
+    implementation 'androidx.recyclerview:recyclerview:1.1.0'
     implementation 'com.caverock:androidsvg-aar:1.4'
-    implementation 'com.github.bumptech.glide:glide:4.11.0'
-    implementation 'com.github.bumptech.glide:okhttp3-integration:4.11.0'
+    implementation "com.github.bumptech.glide:glide:$glide_version"
+    implementation "com.github.bumptech.glide:okhttp3-integration:$glide_version"
     implementation 'com.github.jinatonic.confetti:confetti:1.1.2'
     implementation 'com.google.android.material:material:1.3.0'
     implementation 'com.google.code.gson:gson:2.8.6'
     implementation 'com.takisoft.preferencex:preferencex:1.1.0'
     implementation 'com.takisoft.preferencex:preferencex-colorpicker:1.1.0'
-    implementation 'com.squareup.okhttp3:okhttp:4.9.0'
-    implementation 'com.squareup.okhttp3:okhttp-dnsoverhttps:4.9.0'
-    final def markwon_version = '4.6.2'
+    implementation "com.squareup.okhttp3:okhttp:$okhttp_version"
+    implementation "com.squareup.okhttp3:okhttp-dnsoverhttps:$okhttp_version"
     implementation "io.noties.markwon:core:$markwon_version"
     implementation "io.noties.markwon:ext-strikethrough:$markwon_version"
     implementation "io.noties.markwon:ext-tables:$markwon_version"
@@ -131,19 +131,19 @@ dependencies {
     implementation "io.noties.markwon:html:$markwon_version"
     implementation "io.noties.markwon:image-glide:$markwon_version"
     implementation "io.noties.markwon:linkify:$markwon_version"
-    implementation "rikka.appcompat:appcompat:1.2.0-rc01"
-    implementation "rikka.core:core:1.3.0"
+    implementation 'rikka.appcompat:appcompat:1.2.0-rc01'
+    implementation 'rikka.core:core:1.3.0'
     implementation 'rikka.insets:insets:1.0.1'
     implementation 'rikka.material:material:1.6.0'
     implementation 'rikka.recyclerview:recyclerview-utils:1.2.0'
-    implementation "rikka.widget:borderview:1.0.0"
+    implementation 'rikka.widget:borderview:1.0.0'
     implementation "rikka.widget:switchbar:1.0.2"
     implementation 'rikka.layoutinflater:layoutinflater:1.0.1'
     implementation 'tech.rectifier.preferencex-android:preferencex-simplemenu:88f93154b2'
     implementation 'me.zhanghai.android.appiconloader:appiconloader-glide:1.2.0'
     implementation 'me.zhanghai.android.fastscroll:library:1.1.5'
     implementation files('libs/WeatherView-2.0.3.aar')
-    compileOnly project(":hiddenapi-stubs")
+    compileOnly project(':hiddenapi-stubs')
 }
 
 configurations {
