[manager-service] Fix writeToParcel get removed by R8

--- a/manager-service/build.gradle
+++ b/manager-service/build.gradle
@@ -9,6 +9,7 @@ android {
     defaultConfig {
         minSdkVersion 26
         targetSdkVersion 30
+        consumerProguardFiles 'proguard-rules.pro'
     }
 
     buildTypes {
