--- a/.github/workflows/manager.yml
+++ b/.github/workflows/manager.yml
@@ -19,12 +19,11 @@ jobs:
       - uses: actions/checkout@v2
         with:
           submodules: 'recursive'
+          fetch-depth: 0
       - name: set up JDK 1.8
         uses: actions/setup-java@v1
         with:
           java-version: 1.8
-      - name: Get version code
-        run: echo APPVEYOR_BUILD_NUMBER=$(expr $GITHUB_RUN_NUMBER + 4999) >> $GITHUB_ENV
       - name: Build with Gradle
         run:  bash ./gradlew :app:assembleRelease
       - name: Sign Manager Release
