[core] Introduce c++ dexbuilder to replace dexmaker (#207)

--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "service"]
 	path = service
 	url = https://github.com/Xposed-Modules-Repo/XposedService.git
+[submodule "core/src/main/cpp/external/DexBuilder"]
+	path = core/src/main/cpp/external/DexBuilder
+	url = https://github.com/LSPosed/DexBuilder.git
