--- a/core/src/main/cpp/external/CMakeLists.txt
+++ b/core/src/main/cpp/external/CMakeLists.txt
@@ -18,3 +18,6 @@ target_include_directories(dobby PUBLIC Dobby/builtin-plugin/BionicLinkerRestric
 
 add_subdirectory(SandHook)
 target_include_directories(sandhook.lspd PUBLIC SandHook)
+
+add_subdirectory(DexBuilder)
+target_include_directories(dex_builder PUBLIC DexBuilder)
