[core] Fix illegal access (#214)
* [core] Fix illegal access

* [CI] Upload mappings for core

--- a/.github/workflows/core.yml
+++ b/.github/workflows/core.yml
@@ -46,6 +46,11 @@ jobs:
       with:
         name: ${{ steps.prepareArtifact.outputs.debugName }}
         path: './LSPosed-debug/*'
+    - name: Upload mappings
+      uses: actions/upload-artifact@v2
+      with:
+        name: mappings
+        path: "core/build/outputs/mapping"
     - name: Post to channel
       if: ${{ github.event_name != 'pull_request' && success() && github.ref == 'refs/heads/master' }}
       env:
