--- a/core/src/main/cpp/main/CMakeLists.txt
+++ b/core/src/main/cpp/main/CMakeLists.txt
@@ -20,12 +20,12 @@
 
 cmake_minimum_required(VERSION 3.4.1)
 
-set(CMAKE_ANDROID_STL_TYPE c++_static)
-
 aux_source_directory(src SRC_LIST)
 aux_source_directory(src/jni SRC_JNI_LIST)
 include_directories(include src)
-add_library(riru_lspd SHARED ${SRC_LIST} ${SRC_JNI_LIST})
+add_executable(riru_lspd ${SRC_LIST} ${SRC_JNI_LIST})
+
+SET(CMAKE_EXE_LINKER_FLAGS  "${CMAKE_EXE_LINKER_FLAGS} -Wl,--dynamic-list=${CMAKE_SOURCE_DIR}/dynamic_list")
 
 find_package(riru REQUIRED CONFIG)
 find_library(log-lib log)
