Upgrade to AGP 7, ready to use Java 11 (#261)
* Update gradlew

./gradlew wrapper --gradle-version 6.8.3

* Fix line separator

* Fix build

Co-authored-by: tehcneko <7764726+tehcneko@users.noreply.github.com>

--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,7 @@
 *.iml
 .gradle
 /local.properties
-.idea
-/.idea/caches/build_file_checksums.ser
-/.idea/libraries
-/.idea/modules.xml
-/.idea/workspace.xml
+/.idea
 .DS_Store
 /build
 /captures
